removed type js/script

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		many useful functions which we need.
 		Please don't remove this link or change its URL; leave it as-is!
 		-->
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" ></script>
 
 		<!-- link to your script file here -->
 
@@ -47,7 +47,7 @@
 		<input type="button" name="textField" id="MalkovitchID" value="Malkovitch"> <input type="text" name="Malkovitch" id="MalkovitchField">
 
 
-		<script type="text/javascript" src="js/decoratemytext.js"></script>
+		<script src="js/decoratemytext.js"></script>
 		<footer id="footer">
 			<div>
 				<p> &copy; Maharishi International University. All Rights Reserved.</p>
